try to fix IE6 overflow
Former-commit-id: 654d65b4f9c829040c71570977de8ecbaae1e510 [formerly 4c402dfd32aad4f1b352bc5f15e1d25e761d4698] [formerly 217278dc37665994178c05d061732a9a75b672da [formerly 3a5ba606e564437b13d74d93f1e5aef1bea018dd]]
Former-commit-id: 13ec0ec838e0dacc6162ecc8504e36835abd9062 [formerly 09eda9079d7c9be31594e86603030c27178ef2b4]
Former-commit-id: eb135753dcaa7ea018e4c9e9152b0132ea1407b1

--- a/web/public/css/layout.css
+++ b/web/public/css/layout.css
@@ -68,6 +68,7 @@ code, pre {
   font-family: "Droid Sans Mono", "Monaco", "Andale Mono", "Courier New";
   letter-spacing: 1.1px;
   padding: 0.5em 0.0em 0.5em 0em;
+  overflow: scroll;
 }
 
 pre {
